--- a/mvp/build.gradle
+++ b/mvp/build.gradle
@@ -23,7 +23,9 @@
  */
 
 apply plugin: 'java-library'
+apply plugin: 'maven'
 
+group = 'com.github.michaelobi'
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     compile 'io.reactivex:rxjava:1.3.0'
