--- a/mvp/build.gradle
+++ b/mvp/build.gradle
@@ -28,7 +28,7 @@ apply plugin: 'maven'
 group = 'com.github.michaelobi'
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'io.reactivex:rxjava:1.3.0'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.4'
     implementation 'com.android.support:support-annotations:26.1.0'
 }
 
